add jitpack.io repository

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
     <version>2.0.1</version>
   </parent>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
   <build>
     <plugins>
       <plugin>
